[package]
name = "light-show"
version = "0.1.0"
edition = "2021"

[dependencies]

embassy-futures = { path = "./dep/embassy/embassy-futures" }

embassy-stm32 = { path = "./dep/embassy/embassy-stm32", features = [
    "defmt",
    "unstable-pac",
    "stm32u545re",
    "time-driver-tim1",
    "memory-x",
] }
embassy-sync = { path = "./dep/embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { path = "./dep/embassy/embassy-executor", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { path = "./dep/embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-10_000_000",
] }
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }

cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
